Introduzione[Cloud-Computing]: Concluso.

--- a/1introduzione.tex
+++ b/1introduzione.tex
@@ -17,7 +17,7 @@ Le risorse e le configurazioni a cui fa fede, non sono predefinite ma, con l'uti
  Cloud Provider è in grado di personalizzare e scalare le risorse opportune per quel determinato servizio a quel determinato cliente. Una volta che quest'ultimo termina l'utilizzo delle risorse assegnate, queste tornano nuovamente disponibili, pronte per una nuova assegnazione.
 
 \subsection{Vantaggi}
-E' possibile individuare i maggiori vantaggi che motivano le aziende e gli sviluppatori ad utilizzare il Cloud Computing per i propri applicativi o per le proprie infrastrutture.
+E' possibile individuare i maggiori vantaggi che motivano le aziende e gli sviluppatori a utilizzare il Cloud Computing per i propri applicativi o per le proprie infrastrutture.
 %In realtà non è del tutto corretto perchè l'azienda può scegliere di costruirsi la propria infrastruttura su un Cloud locale%
 \subsubsection{Costi}
 E' chiaro che in quest'ottica, il modello economico Pay-as-you-go è diventato parte integrante della strategia di fruizione dei servizi, in quanto porta innumerevoli vantaggi ai fornitori ma sopratutto ai clienti stessi, tra cui:
@@ -28,43 +28,36 @@ E' chiaro che in quest'ottica, il modello economico Pay-as-you-go è diventato p
     \end{itemize}
 
 \subsubsection{Performance e scalabilità}
-La tecnologia alla base del Cloud Computing è la virtualizzazione la quale, date le sue potenzialità, permette di ridimensionare agilmente le risorse assegnate. La potenza computazionale, la larghezza di banda e lo spazio di archiviazione sono esempi di risorse che possono essere scalate in base al carico di richieste, andando quindi ad allocarne una quantità maggiore in caso di maggiore attività, una quantità minore in caso di minore attività ed a deallocare quelle inutilizzate in caso di inattività prolungata.
+La tecnologia alla base del Cloud Computing è la virtualizzazione la quale, date le sue potenzialità, permette di ridimensionare agilmente le risorse assegnate. La potenza computazionale, la larghezza di banda e lo spazio di archiviazione sono esempi di risorse che possono essere scalate in base al carico di richieste, andando quindi ad allocarne una quantità maggiore in caso di maggiore attività, una quantità minore in caso di minore attività e a deallocare quelle inutilizzate in caso d'inattività prolungata.
 
-\subsection{Modelli di servizio} %SEZIONE DA MODIFICARE ✌️%
-Nonostante la maturità del mercato del cloud computing, molte organizzazioni non sono ancora a conoscenza dei servizi di cloud computing e dei modelli di implementazione disponibili. Nuovi prodotti e servizi cloud arrivano quasi ogni giorno, spinti dalla costante innovazione delle tecnologie.
-Esistono tre modelli principali di servizi di cloud computing di cui ognuno rappresenta e delinea stack di servizi e responsabilità differenti.
+\subsection{Modelli di servizio}
+Il Cloud Computing è un mondo in continua crescita ed evoluzione, nuovi prodotti e servizi cloud arrivano quasi ogni giorno, spinti dalle costanti innovazioni tecnologiche.
+Nonostante la maturità del mercato, molte organizzazioni non sono ancora a conoscenza dei servizi e dei modelli d'implementazione che i diversi Cloud Provider forniscono.
+I tre modelli principali a oggi maggiormente diffusi sono così definiti:
 
 \subsubsection{Software as a Service (Saas)}
-Software as a Service (SaaS) è il modello di servizio cloud che fornisce l’accesso a un prodotto software completo, eseguito e gestito dal fornitore del servizio.
-L’accesso al software scelto utilizzando un modello SaaS consente di concentrarsi esclusivamente su come utilizzare al meglio tale software. Il fornitore SaaS è il responsabile della fornitura, della manutenzione e dell’aggiornamento del software, compresa l’infrastruttura sottostante. Un esempio comune di SaaS è una soluzione di Customer Relationship Management (CRM) basata sul web. Si memorizzano e gestiscono tutti i contatti tramite CRM senza dover aggiornare il software all’ultima versione o mantenere il server e il sistema operativo su cui il software è in esecuzione.
+Software as a Service (SaaS) è il modello di servizio cloud che fornisce l'accesso a un prodotto software completo, eseguito e gestito dal fornitore del servizio.
+In questo particolare modello, il fornitore ha la piena responsabilità sull'intero ciclo di vita del software e sulla manutenzione dell'infrastruttura sottostante. Questo consente al cliente di concentrarsi esclusivamente su come utilizzare al meglio le specifiche e le funzionalità del software offerto.
 
 \subsubsection{Platform as a Service (Saas)}
-Platform as a Service (PaaS) è il modello di servizio cloud in cui si accede a strumenti hardware e software combinati attraverso un fornitore di servizi. Il PaaS è usato più comunemente per lo sviluppo di applicazioni. Un fornitore PaaS vi dà accesso all’infrastruttura cloud combinata necessaria per lo sviluppo di applicazioni – database, middleware, sistemi operativi, server – senza la complessità di gestione che ne deriva. Questo vi permette di aumentare l’efficienza. Invece di dedicare tempo all’installazione e alla configurazione dell’infrastruttura, vi potete concentrare esclusivamente sullo sviluppo, l’esecuzione e la gestione delle applicazioni.
+Platform as a Service (PaaS) è il modello usato più comunemente per lo sviluppo di applicazioni. Il fornitore del servizio fornisce l'accesso alle proprie risorse infrastrutturali come: basi di dati, sistemi operativi e server, senza la complessità di gestione che ne deriva. Questo permette al cliente di dedicare le proprie risorse all'ottimizzazione dell'applicativo invece che all'installazione e alla configurazione dell'infrastruttura.
 
 \subsubsection{Infrastructure as a Service (Saas)}
-Infrastructure as a Service (IaaS) è il modello di servizio che costituisce la base per l’implementazione della tecnologia cloud. Attraverso un provider IaaS, ottenete l’accesso on-demand via internet alle risorse IT principali, compresi i computer (hardware virtuale o dedicato), il networking e l’archiviazione. IaaS vi offre l’accesso a una risorsa hardware flessibile e all’avanguardia che può essere scalata per soddisfare le esigenze di computing e archiviazione della vostra azienda. Utilizzate questa infrastruttura per fornire le applicazioni, il software e le piattaforme della vostra organizzazione: non dovete preoccuparvi della responsabilità di gestirla e mantenerla.
-Un tipico esempio di implementazione IaaS combinerà macchine virtuali e dischi di archiviazione. Ogni singolo elemento personalizzato è pensato per soddisfare le esigenze della vostra azienda, sia che si tratti del sistema operativo del server che delle dimensioni della capacità di archiviazione.
+Infrastructure as a Service (IaaS) è il modello che permette al cliente d'implementare la propria infrastruttura cloud. Il Cloud Provider fornisce l'accesso on-demand delle proprie risorse (sia fisiche che virtuali) volte alla computazione, archiviazione e alla rete.
+Il cliente ottiene così l'enorme vantaggio di poter distribuire e gestire i propri applicativi avendo la sicurezza di avere risorse sempre disponibili, affidabili e scalabili.
 
-\subsection{Modelli di distribuzione} %SEZIONE DA MODIFICARE ✌️%
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+\subsection{Modelli di distribuzione}
+Ogni modello d'implementazione del cloud ha una propria configurazione unica con una gamma di requisiti diversi e vantaggi associati.
 
 \subsubsection{Public Cloud}
-Il Public Cloud è invece un modello di distribuzione di Cloud Computing in cui i servizi cloud sono di proprietà di un fornitore esterno. In questo caso, l’infrastruttura cloud è strutturata per l’uso aperto al pubblico e i servizi vengono messi a disposizione di più utilizzatori attraverso Internet.
-La configurazione di un Cloud Pubblico e quella di un Cloud Privato possono essere identiche.
-Le differenze risiedono, invece, nel fatto che un Public Cloud può essere configurato, distribuito e gestito più rapidamente. Questo abbatte i costi per l’acquisto, nonché per la gestione e la manutenzione dell’infrastruttura, portando a un notevole risparmio. Molti provider offrono, ad esempio, la possibilità di pagare a consumo solo per le risorse utilizzate.
-Il Public Cloud Computing garantisce anche una maggiore agilità operativa e una scalabilità pressoché illimitata, perché sfrutta le funzionalità e le risorse di calcolo e storage specifiche di grandi fornitori come Google, Microsoft e Amazon.
-Implementare un Cloud Pubblico permette poi a un’organizzazione di bypassare la responsabilità della gestione e della manutenzione dei sistemi e dell’infrastruttura, che ricadono sul fornitore. Questo solleva dal compito le organizzazioni, ma come abbiamo visto non è indicato per le aziende che operano in settori fortemente regolamentati e che hanno bisogno di un maggior controllo sulle risorse e i dati.
+Il Public Cloud è un modello di distribuzione in cui i servizi cloud sono di proprietà di fornitori esterni. Scegliere questa metodologia garantisce una maggiore agilità operativa e una scalabilità pressoché illimitata, perché sfrutta le funzionalità e le risorse di grandi fornitori come Google, Microsoft e Amazon.
+Trattandosi inoltre di ambienti gestiti, il cliente si solleva dalle responsabilità di manutenzione e controllo delle risorse utilizzate.
+
+\subsubsection{Private Cloud}
+Nel modello di distribuzione Private Cloud si sceglie di sviluppare, mantenere e gestire la propria infrastruttura cloud e di fornire l'accesso solo alla propria rete interna. Con il Private Cloud le organizzazioni mantengono un controllo completo dell'infrastruttura. Questo si traduce in un controllo completo delle proprie risorse e ad una maggior libertà di personalizzazione dei servizi, che sono consumati all'interno del cloud.
 
 \subsubsection{Hybrid Cloud}
-L’Hybrid Cloud è l’utilizzo congiunto di implementazioni Public Cloud e Private Cloud.
-In sostanza, Cloud Pubblico e Privato restano due soggetti unici, e le organizzazioni possono sfruttare entrambi i modelli di distribuzione di Cloud Computing e/o scegliere il cloud da utilizzare in base alle esigenze specifiche dei dati.
-Ad esempio, possono utilizzare le risorse del Public Cloud per attività di computazione, e tenere al sicuro i dati sensibili e le applicazioni critiche nel Private Cloud. Oppure, di fronte a picchi improvvisi e temporanei della domanda di risorse, le organizzazioni possono scegliere di spostare i carichi di lavoro dal Private Cloud al Public Cloud, senza investire in nuove apparecchiature aggiuntive che rischierebbero di rimanere inattive o inutilizzate in futuro.
+L’Hybrid Cloud è un modello di distribuzione ibrido in quanto 
+Si sceglie di unire i vantaggi del cloud pubblico e di quello privato.
+Ad esempio, si possono utilizzare le risorse del Public Cloud per attività di computazione, e tenere al sicuro i dati sensibili e le applicazioni critiche nel Private Cloud. Oppure, di fronte a picchi improvvisi e temporanei della domanda di risorse, le organizzazioni possono scegliere di spostare i carichi di lavoro dal Private Cloud al Public Cloud.
 Utilizzato in questo modo, l’Hybrid Cloud consente di ottenere il meglio da entrambe le infrastrutture.
-Il modello ibrido è in effetti scelto dalle aziende per ottimizzare le risorse esistenti in modo rapido, flessibile ed economico.
-
-\subsection{Private Cloud}
-Nel modello di distribuzione Private Cloud l’infrastruttura cloud viene messa a disposizione di una singola organizzazione che include più utenti. Le risorse sono condivise esclusivamente all’interno dell’organizzazione e gli utenti possono accedere al Cloud Privato tramite la rete Intranet aziendale o tramite una rete privata virtuale (VPN).
-Con il Private Cloud le organizzazioni mantengono un controllo completo dell’infrastruttura.
-Questo si traduce in una una maggiore sicurezza e in una personalizzazione dei servizi, che sono consumati all’interno del cloud: tutto per ottenere prestazioni conformi ai requisiti aziendali.
-Per questo il Private Cloud ben si adatta a quei settori dove sicurezza e requisiti di conformità, o normative, sono fattori fondamentali: in poche parole, a chi ha esigenze di compliance e sicurezza specifiche. Ad esempio, un’azienda può scegliere di utilizzare il Cloud Privato per archiviare i dati sensibili, implementando un livello di sicurezza e privacy più elevato.
-Scegliere un Private Cloud offre quindi molti vantaggi, ma questi benefici hanno un costo. Il modello di distribuzione di Cloud Computing prevede infatti un investimento maggiore per configurare l’infrastruttura.
