--- a/Capitoli/Introduzione/1cloud-computing.tex
+++ b/Capitoli/Introduzione/1cloud-computing.tex
@@ -1,14 +1,3 @@
-%!TEX root = 00main.tex
-
-%To-Do%
-\section{Introduzione}
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
 \section{Cloud Computing}
 \subsection{Panoramica}
 Il Cloud Computing è una particolare ed innovativa forma di erogazione di risorse da un fornitore ad un cliente attraverso la rete internet. Esso segue un paradigma architetturale di tipo distribuito ed i servizi offerti possono essere vari come l'archiviazione, la computazione oppure una semplice trasmissione dati.
@@ -22,9 +11,9 @@ E' possibile individuare i maggiori vantaggi che motivano le aziende e gli svilu
 \subsubsection{Costi}
 E' chiaro che in quest'ottica, il modello economico Pay-as-you-go è diventato parte integrante della strategia di fruizione dei servizi, in quanto porta innumerevoli vantaggi ai fornitori ma sopratutto ai clienti stessi, tra cui:
     \begin{itemize}
-    \item \textit{Ottimizzazione del capitale} - la libertà di pagare solo ciò di cui si ha realmente bisogno, l'eliminazione dei costi di investimento e dei costi di mantenimento ed il miglioramento dell'efficienza energetica permettono un notevole abbattimento dei costi ed un'ottimizzazione del capitale.
-    \item \textit{Flessibilità} - I clienti, in ogni momento ed in maniera quasi istantanea, hanno la massima libertà di poter annullare, sostituire o fermare qualsiasi servizio in corso.
-    \item \textit{Scalabilità} - Il sistema adottato, accompagna senza problemi la crescita di piccole infrastrutture. In effetti, per una Start-up agli inizi, è pratico dotarsi di uno strumento adeguato in termini di prezzi e funzionalità, per poi farlo crescere in parallelo con l'evoluzione e le ambizioni dell'azienda.
+    \item \textbf{Ottimizzazione del capitale} - la libertà di pagare solo ciò di cui si ha realmente bisogno, l'eliminazione dei costi di investimento e dei costi di mantenimento ed il miglioramento dell'efficienza energetica permettono un notevole abbattimento dei costi ed un'ottimizzazione del capitale.
+    \item \textbf{Flessibilità} - I clienti, in ogni momento ed in maniera quasi istantanea, hanno la massima libertà di poter annullare, sostituire o fermare qualsiasi servizio in corso.
+    \item \textbf{Scalabilità} - Il sistema adottato, accompagna senza problemi la crescita di piccole infrastrutture. In effetti, per una Start-up agli inizi, è pratico dotarsi di uno strumento adeguato in termini di prezzi e funzionalità, per poi farlo crescere in parallelo con l'evoluzione e le ambizioni dell'azienda.
     \end{itemize}
 
 \subsubsection{Performance e scalabilità}
@@ -54,7 +43,7 @@ Il Public Cloud è un modello di distribuzione in cui i servizi cloud sono di pr
 Trattandosi inoltre di ambienti gestiti, il cliente si solleva dalle responsabilità di manutenzione e controllo delle risorse utilizzate.
 
 \subsubsection{Private Cloud}
-Nel modello di distribuzione Private Cloud si sceglie di sviluppare, mantenere e gestire la propria infrastruttura cloud e di fornire l'accesso solo alla propria rete interna. Con il Private Cloud le organizzazioni mantengono un controllo completo dell'infrastruttura. Questo si traduce in un controllo completo delle proprie risorse e ad una maggior libertà di personalizzazione dei servizi, che sono consumati all'interno del cloud.
+Nel modello di distribuzione Private Cloud si sceglie di sviluppare, mantenere e gestire la propria infrastruttura cloud, fornendo l'accesso solo alla propria rete interna. Con il Private Cloud le organizzazioni mantengono un controllo completo dell'infrastruttura. Questo si traduce in un controllo completo delle proprie risorse e ad una maggior libertà di personalizzazione dei servizi, che sono consumati all'interno del cloud.
 
 \subsubsection{Hybrid Cloud}
 L’Hybrid Cloud è un modello di distribuzione ibrido in quanto 
