--- a/00main.tex
+++ b/00main.tex
@@ -127,12 +127,8 @@ Anno Accademico 2020-2021
 \chapter{Introduzione}
 \setcounter{page}{1} 	% devono seguire solo il primo capitolo
 \pagenumbering{arabic}	% devono seguire solo il primo capitolo
-\input{Capitoli/Introduzione/0introduzione.tex}
-\input{Capitoli/Introduzione/1cloud-computing.tex}
-\input{Capitoli/Introduzione/2multi-cloud.tex}
-\input{Capitoli/Introduzione/3containerizzazione.tex}
-\input{Capitoli/Introduzione/4kubernetes.tex}
-
+\input{Capitoli/StatoArte/0introduzione.tex}
+\input{Capitoli/StatoArte/1fly.tex}
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \chapter{Stato dell'Arte}
