Introduzione[Kubernetes]: Panoramica, Architettura, Control Plane.

--- a/00main.tex
+++ b/00main.tex
@@ -12,6 +12,7 @@
 \usepackage{graphicx}
 \usepackage{todonotes}
 \usepackage{moreverb}
+\usepackage{float}
 \usepackage[labelfont=it,textfont={it}]{caption}
 \usepackage[final,bookmarks,breaklinks,colorlinks,allcolors=black]{hyperref}
 \usepackage{color}
