--- a/Capitoli/Introduzione/4kubernetes.tex
+++ b/Capitoli/Introduzione/4kubernetes.tex
@@ -2,11 +2,10 @@
 
 \section{Kubernetes}
 Kubernetes è una piattaforma portatile, estensibile e open-source per la gestione e l'orchestrazione di applicativi Cloud-Native.
-Il progetto è scritto in linguaggio Go ed è stato inizialmente sviluppato da Google per migliorare la gestione dei propri applicativi. Kubernetes é attualmente parte della Cloud Native Computing Foundation, organizzazione che promuove e mantiene progetti open-source volti all'approccio Cloud Native.
+La piattaforma è scritta in linguaggio Go ed è stato inizialmente sviluppato da Google per migliorare la gestione dei propri applicativi. Il progetto è attualmente parte della Cloud Native Computing Foundation, organizzazione che promuove e mantiene progetti open-source volti all'approccio Cloud Native.
 Kubernetes utilizza un insieme di oggetti fruibili tramite API per descrivere lo stato desiderato del cluster, indicando, ad esempio, quali applicazioni eseguire, quali immagini utilizzare, il numero di repliche da istanziare, quali risorse di rete e di spazio su disco rendere disponibili. L'interazione viene resa possibile grazie a kube-apiserver, il server HTTP che implementa l'API Kubernetes. L'utente ha dunque due possibilità per manipolare le configurazioni del cluster, la prima è quella di eseguire esplicitamente richieste di tipo RESTful al server API, la seconda e' quella di utilizzare kubectl, un'interfaccia da linea di comando costituita da una serie di comandi e sotto-comandi che astraggono le chiamate API.
 \subsection{Architettura}
-Un cluster Kubernetes è un insieme di macchine, chiamate nodi, che eseguono carichi applicativi. Il cluster deve avere almeno un Worker Node ed un Master Node. Il Worker Node è un tipo di nodo che ospita i Pod, particolari componenti di Kubernetes che contengono uno o piú container ed un Master Node, il nodo su cui viene eseguito il Control Plane, una componente fondamentale di Kubernetes che svolge le attivita di controllo del cluster.
-
+Un cluster Kubernetes è un insieme di macchine, chiamate nodi, che eseguono carichi applicativi. Il cluster deve avere almeno un Worker Node ed un Master Node. Il Worker Node è un tipo di nodo che ospita i Pod, particolari componenti di Kubernetes che contengono uno o piú container. Il Master Node è il nodo su cui viene eseguito il Control Plane, una componente fondamentale di Kubernetes che svolge le attivita operative del cluster.
 
 \begin{figure}[H]
  \centering
@@ -15,11 +14,11 @@ Un cluster Kubernetes è un insieme di macchine, chiamate nodi, che eseguono car
  \label{fig:Architettura}
 \end{figure}
 
-\subsection{Kubernetes Control Plane}
-Il Kubernetes Control Plane è il centro nevralgico delle operazioni del cluster. È costituito da una serie di componenti, in esecuzione all'interno del cluster, che hanno il compito di garantire l'integritá esecutiva del cluster, ad esempio, lo scheduling dei Worker Node e la gestione dei possibili failures dei Pod.
+\subsection{Componenti del Control Plane}
+Il Kubernetes Control Plane è il centro nevralgico delle operazioni del cluster. È costituito da una serie di componenti, in esecuzione all'interno del cluster, che hanno il compito di garantire l'integritá esecutiva del cluster come ad esempio lo scheduling dei Worker Node e la gestione dei possibili failures dei Pod.
 \begin{itemize}
     \item\textbf{kube-apiserver}
-    kube-apiserver è il server API per il cluster Kubernetes. È il punto di contatto centrale a cui accedono tutti gli utenti, l'automazione e i componenti nel cluster Kubernetes. Il server API implementa un'API RESTful su HTTP, esegue tutte le operazioni API ed è responsabile dell'archiviazione degli oggetti API in un backend di archiviazione persistente. 
+    kube-apiserver è il server API per il cluster Kubernetes. È il punto di contatto centrale a cui accedono tutti gli utenti, l'automazione e i componenti nel cluster Kubernetes. Il server API implementa un'API RESTful su HTTP, esegue tutte le operazioni API ed è responsabile dell'archiviazione degli oggetti API in un backend di archiviazione persistente.
     \item\textbf{etcd}
     etcd è la componente di archiviazione principale di Kubernetes, etcd memorizza e replica tutti gli stati dei cluster Kubernetes. Il meccanismo di memorizzazione che adotta è di tipo chiave-valore ovvero ad ogni valore memorizzato viene associato una chiave che rappresenta il suo identificatore univoco. In questo modo il Control Plane è in grado di storicizzare gli stati del Cluster confrontando lo stato attuale con quello desiderato in modo di intervenire tempestivamente in caso di necessità.
     \item\textbf{kube-scheduler}
@@ -30,7 +29,7 @@ Il Kubernetes Control Plane è il centro nevralgico delle operazioni del cluster
     Alcuni esempi di controller gestiti dal kube-controller-manager sono:
     Node Controller: Responsabile del monitoraggio dei nodi del cluster, e.g. della gestione delle azioni da eseguire quando un nodo diventa non disponibile.
     Replication Controller: Responsabile per il mantenimento del corretto numero di Pod per ogni ReplicaSet presente nel sistema
-    Endpoints Controller: Popola gli oggetti Endpoints (cioè, mette in relazioni i Pods con i Services).
+    Endpoints Controller Popola gli oggetti Endpoints (cioè, mette in relazioni i Pods con i Services).
     Service Account e Token Controllers: Creano gli account di default e i token di accesso alle API per i nuovi namespaces.
     % DA RIVEDERE ✌️
     \item\textbf{cloud-controller-manager}
@@ -45,3 +44,14 @@ Il Kubernetes Control Plane è il centro nevralgico delle operazioni del cluster
     Service Controller: Per creare, aggiornare ed eliminare i load balancer del cloud provider
 
 \end{itemize}
+\subsection{Componenti del Worker Node}
+Il Worker Node è il nodo del cluster su cui viene eseguito effettivamente l'applicazione. Su ogni nodo di tipo Worker Node vengono eseguiti tre componenti di Kubernetes.
+\begin{itemize}
+    \item{kubelet}
+     kubelet è un agente che è sempre in esecuzione su ogni Worker Node e ha come compito quello di controllare il ciclo di vita dei container all'interno dei Pod. La kubelet riceve un set di specifiche definite in fase di deployment dall'utente  e si assicura che i container rispettino tali specifiche.
+    \item{kube-proxy}
+    kube-proxy e' un proxy eseguito su ogni Nodo, ossia un particolare componente che consente di identificare i nodi all'interno della rete del cluster e permette che essi possano comunicare sia all'interno che all'esterno del cluster.
+    \item{Container Runtime} il Container Runtime è il software responsabile dell'esecuzione dei container. Kubernetes supporta tutte le implementazioni di Kubernetes CRI (Container Runtime Interface) come ad esempio Docker e containerd.
+\end{itemize}
+\subsection{Oggetti di Kubernetes}
+Kubernetes offre una varietà di oggetti per definire le specifiche del proprio sistema. Questi oggetti costituiscono entità persistenti per rappresentare lo stato del cluster, quali applicazioni sono in esecuzione e su quali nodi, le risorse da allocare e le politiche da adottare. Per istanziare un oggetto con le direttive e le informazioni decise, si utilizza spesso un file YAML oppure un file JSON.
